Fix message style, align view names

--- a/config/plugins/visualizations/charts/static/app.css
+++ b/config/plugins/visualizations/charts/static/app.css
@@ -1,6 +1,7 @@
 .charts-viewer .ui-message {
   position: absolute;
   width: calc(100% - 20px);
+  z-index: 100;
 }
 
 .charts-tooltip {
